<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

  <LinearLayout
      android:id="@+id/linearLayout4"
      android:layout_width="330dp"
      android:layout_height="206dp"
      android:layout_marginStart="38dp"
      android:layout_marginTop="34dp"
      android:layout_marginEnd="38dp"
      android:layout_marginBottom="179dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView">

    <Button
        android:id="@+id/btn_startMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/start_game" />

    <Button
        android:id="@+id/btn_startMechs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/read_mechs" />

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/quit_game" />
  </LinearLayout>

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="108dp"
      android:layout_marginEnd="40dp"
      android:layout_marginBottom="29dp"
      android:text="@string/title"
      android:textSize="34sp"
      app:layout_constraintBottom_toTopOf="@+id/imageView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="323dp"
      android:layout_height="192dp"
      android:layout_marginStart="44dp"
      android:layout_marginTop="29dp"
      android:layout_marginEnd="44dp"
      android:layout_marginBottom="34dp"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5"
      app:srcCompat="@drawable/logo" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="68dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="69dp"
      android:layout_marginBottom="15dp"
      android:text="@string/auth"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/imageView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>